# csad2526KI404LiesnikovMaksymAndriovich15

./: CMakeLists.txt  README.md  ci.cmd  ci.sh  history.txt  math_operations.cpp  math_operations.h  spi_receiver_rx.vhd  spi_transmitter_tx.vhd  tb_spi.vhd
.github/workflows/: ci.yml
tests/: unit_tests.cpp
